# llm-rankings

./: .gitignore  Makefile  README.md  config.yaml  index.html  pyproject.toml
.github/workflows/: ci.yml  refresh-rankings.yml
data/: candidates.json  rankings.json
scripts/: ingest_rankings.py  validate_rankings.py
tests/: test_pipeline.py
