[project]
name = "llm-signal"
version = "0.1.0"
description = "Freshness-aware frontier LLM rankings with source health, cost, value, and model discovery alerts."
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "hypothesis>=6.0",
    "pydantic>=2.0",
    "jsonschema>=4.0",
]

[project.scripts]
ingest-rankings = "scripts.ingest_rankings:main"
validate-rankings = "scripts.validate_rankings:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["scripts"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
fail_under = 80